--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-toggle-dark-mode": "^1.1.1"
+    "react-simple-typewriter": "^5.0.1",
+    "react-toggle-dark-mode": "^1.1.1",
+    "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
